# galytix

./: .pre-commit-config.yaml  README.md  docker-compose.yaml
docker/: Dockerfile  postgres-init.sql
embedding_engine/: app.py  config.py  load_vectors.py  pyproject.toml  requirements.txt
embedding_engine/database/: __init__.py  phrases_table.py  vectors_table.py
embedding_engine/embedding/: assign.py  compute.py  distances.py  tokenizer.py  utils.py
